# RK3588-Qt6-YOLOv5-Deployment

./: CMakeLists.txt  README.md
docs/: RK3588-Qt6-YOLOv5-Deployment.md
